# Sistemas_Controle_Tarefas

./: .replit  Cargo.toml
migrations/: 001_create_tables.sql
src/: auth.rs  db.rs  handlers.rs  main.rs  middleware.rs  models.rs  routes.rs
